<resources>
    <string name="app_name">Охотники Вампуса</string>

    <string name="game_title">Охотники Вампуса</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Регистрация</string>
    <string name="play_offline_button">Играть оффлайн</string>

    <string name="sign_in_button">Войти</string>
    <string name="login_label">Логин</string>
    <string name="password_label">Пароль</string>
    <!--    <string name="login_button">Войти</string>-->
    <string name="back_button">Назад</string>

    <string name="sign_up_button">Регистрация</string>
    <!--    <string name="login_label">Логин</string>-->
    <!--    <string name="password_label">Пароль</string>-->
    <string name="password_again_label">Пароль ещё раз</string>
    <!--    <string name="register_button">Регистрация</string>-->
    <!--    <string name="back_button">Назад</string>-->

    <!--    <string name="game_title">Охотники Вампуса</string>-->
    <string name="find_room_button">Присоединиться</string>
    <string name="create_room_button">Создать комнату</string>
    <string name="account_button">Аккаунт</string>
    <string name="sign_out_button">Выйти из аккаунта</string>

    <string name="find_room_label">Поиск комнат</string>
    <string name="host_nickname_label">Ник хоста</string>
    <string name="players_label">Кол-во игроков</string>
    <!--    <string name="back_button">Назад</string>-->

    <string name="make_room_label">Создать комнату</string>
    <string name="max_players_label">Макс. игроков</string>
    <string name="create_button">Создать</string>
    <!--    <string name="back_button">Назад</string>-->

    <!--    <string name="back_button">Назад</string>-->

    <string name="lobby_label">Лобби</string>
    <string name="player_label">Игрок</string>
    <string name="kick_button">Кикнуть</string>
    <string name="start_game_button">Начать игру</string>
    <!--    <string name="back_button">Назад</string>-->

    <string name="enter_login_helper_text">Введите логин</string>
    <string name="enter_password_helper_text">Введите пароль</string>

    <string name="login_helper_text">Логин должен содержать от 1 до 30 символов (цифры и буквы латинского алфавита)</string>
    <string name="password_helper_text">Пароль должен содержать от 1 до 30 символов</string>
    <string name="password_again_helper_text">Пароли должны совпадать</string>
    <string name="lobby_list">Список лобби</string>
    <string name="player_list">Список игроков</string>
    <string name="start_game">Начать игру</string>

</resources>