<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/WumpTheme.LinearLayout"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEditTextLayout"
        style="@style/WumpTheme.TextInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="30"
        app:helperText="@string/login_helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_label"
            android:inputType="text"
            android:lines="1"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/WumpTheme.TextInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="30"
        app:helperText="@string/password_helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:lines="1"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordAgainEditTextLayout"
        style="@style/WumpTheme.TextInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="30"
        app:helperText="@string/password_helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordAgainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_again_label"
            android:inputType="textPassword"
            android:lines="1"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        style="@style/WumpTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:onClick="onRegisterButtonClick"
        android:text="@string/register_button" />
</LinearLayout>