<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/WumpTheme.LinearLayout"
    tools:context=".MainActivity"
    android:windowActivityTransitions="false">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/WumpTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onLoginButtonClick"
        android:text="@string/login_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        style="@style/WumpTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onRegisterButtonClick"
        android:text="@string/register_button" />
</LinearLayout>